# llama-discord-bot-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yaml
src/: config.rs  main.rs
src/bot/: default_prompt.rs  handler.rs  inference.rs  llm.rs  mod.rs  utils.rs
src/commands/: ask.rs  mission.rs  mod.rs  reset.rs
