[package]
name = "llama-discord-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
llama-cpp-2 = { version = "0.1.92" }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.22.0"
dotenv = "0.15"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
